@@ -1,0 +1,5 @@
+noinst_DATA = defobjrevhistory.sgml
+
+include $(top_srcdir)/Makefile.rules
+
+
