@@ -1,4 +1,0 @@
-<!entity defobjcont.sgml system "defobjcont.sgml">
-<!entity defobjmeta.sgml system "defobjmeta.sgml">
-<!entity defobj00.sgml system "defobj00.sgml">
-<!entity defobjpages.sgml system "defobjpages.sgml">
