@@ -1,0 +1,4 @@
+<!entity defobjcont.sgml system "@srcdir@/defobjcont.sgml">
+<!entity defobjmeta.sgml system "@srcdir@/defobjmeta.sgml">
+<!entity defobj00.sgml system "@srcdir@/defobj00.sgml">
+<!entity defobjpages.sgml system "defobjpages.sgml">
